src/objects/HRO_Onboarding_Task__c.object
<CustomObject>
    <fields>
        <fullName>Action_Taken__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to identify if the user has already taken action</description>
        <label>Action Taken?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Action_Type__c</fullName>
        <label>Task type</label>
        <picklist>
            <picklistValues>
                <fullName>Ownership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Network</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Culture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capability</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ExternalPortalLink__c</fullName>
        <label>Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Leader_Name__c</fullName>
        <description>Only used for Pre-Boarding tasks as User will not yet be in the system</description>
        <label>New Leader Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Onboarding_Task_Set__c</fullName>
        <label>Onboarding Task Set</label>
        <referenceTo>HRO_Onboarding_Task_Set__c</referenceTo>
        <relationshipLabel>Onboarding Tasks</relationshipLabel>
        <relationshipName>Onboarding_Tasks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Phase__c</fullName>
        <label>Phase</label>
        <picklist>
            <picklistValues>
                <fullName>Pre-Boarding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Day 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Week 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Month 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Month 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Month 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beyond Onboarding</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Task_Detail__c</fullName>
        <label>Task Description</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <label>Onboarding Task</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>HRO-OTT-{00000}</displayFormat>
        <label>Task Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Onboarding Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>